Fixed jumpy performance module on artist / track page

--- a/website/css/maloja.css
+++ b/website/css/maloja.css
@@ -374,7 +374,7 @@ a.bronze {
 table.twopart {
 	width:100%;
 }
-table.twopart>tr>td {
+table.twopart tr td {
 	width:50%;
 }
 
